feat: Adicionado login com JWT.
Adicionado rotas de login para autenticação, com redirecionamento do jwtToken.

--- a/appsettings.json
+++ b/appsettings.json
@@ -37,48 +37,17 @@
       "default": {
         "ClusterId": "backend_cluster",
         "Match": {
-          "Path": "/{**catch-all}"
-        }
-      },
-      "payment": {
-        "ClusterId": "payment_cluster",
-        "Match": {
-          "Path":  "/payment/{**catch-all}"
+          "Path": "/api/{**catch-all}"
         }
       }
     },
     "Clusters": {
-      "payment_cluster": {
-        "LoadBalancingpolicy": "RoundRobin",
-        "Destinations": {
-          "server1": {
-            "Address": "http://localhost:4242"
-          }
-        },
-        "HealthCheck": {
-          "Enabled": true,
-          "Interval": "00:00:30",
-          "Timeout": "00:00:10",
-          "policy": "ConsecutiveFailures",
-          "Path": "/health"
-        }
-      },
       "backend_cluster": {
         "LoadBalancingpolicy": "RoundRobin",
         "Destinations": {
           "server1": {
             "Address": "http://localhost:5001"
-          },
-          "server2": {
-            "Address": "http://localhost:5002"
           }
-        },
-        "HealthCheck": {
-          "Enabled": true,
-          "Interval": "00:00:30",
-          "Timeout": "00:00:10",
-          "policy": "ConsecutiveFailures",
-          "Path": "/health"
         }
       }
     }
