doc: Atualizado documentação.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,52 +1,22 @@
 {
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.File"
-    ],
-    "MinimumLevel": {
-      "Default": "Error",
-      "Override": {
-        "Microsoft": "Error",
-        "System": "Error",
-        "Yarp.ReverseProxy": "Debug"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "logs/log-.txt",
-          "rollingInterval": "Day"
-        }
-      }
-    ],
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName"
-    ],
-    "Properties": {
-      "Application": "ReverseProxyLoadBalancer"
-    }
-  },
   "ReverseProxy": {
     "Routes": {
       "default": {
-        "ClusterId": "backend_cluster",
+        "ClusterId": "product_cluster",
         "Match": {
-          "Path": "/api/{**catch-all}"
-        }
+          "Path": "/product/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/product" }
+        ]
       }
     },
     "Clusters": {
-      "backend_cluster": {
+      "product_cluster": {
         "LoadBalancingpolicy": "RoundRobin",
         "Destinations": {
           "server1": {
-            "Address": "http://localhost:5001"
+            "Address": "http://localhost:5001/api/product"
           }
         }
       }
